# power-instruction-analyzer

./: .gitignore  Cargo.toml  README.md  gen-output.sh  libre-soc-install.sh  pyproject.toml
.github/workflows/: mirror.yml
power-instruction-analyzer-proc-macro/: Cargo.toml
power-instruction-analyzer-proc-macro/src/: inline_assembly.rs  instructions.rs  lib.rs
src/: instr_models.rs  lib.rs  main.rs  python.rs  serde_hex.rs
tests/: test_power_instruction_analyzer.py
