# SPDX-License-Identifier: LGPL-2.1-or-later
# See Notices.txt for copyright information
[package]
name = "power-instruction-analyzer"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
edition = "2018"
license = "LGPL-2.1-or-later"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"